--- a/index.html
+++ b/index.html
@@ -18063,6 +18063,135 @@ function dayRangeAround(d, days){
         }
       }
 
+      // ── SMOKE TRANSPORT RENDERER STATUS ──
+      // Shows what the smoke visualization is actually computing
+      if (smokeIntel && (fireCount > 0 || pm25Val > 20)) {
+        var upF = smokeIntel.upwindFires || [];
+        var crF = smokeIntel.crosswindFires || [];
+        var dnF = smokeIntel.downwindFires || [];
+        var totalTracked = upF.length + crF.length + dnF.length;
+        var renderCap = Math.min(60, totalTracked);
+        var dualLayerCount = 0;
+        var largestFire = null;
+        var allFiresList = upF.concat(crF).concat(dnF);
+        allFiresList.forEach(function(f){
+          if((f.acres || 0) > 800) dualLayerCount++;
+          if(!largestFire || (f.acres || 0) > (largestFire.acres || 0)) largestFire = f;
+        });
+
+        // Diurnal mixing assessment
+        var hour = new Date().getHours();
+        var diurnalPhase, diurnalCol;
+        if(hour >= 6 && hour < 10){ diurnalPhase = 'MORNING TRANSITION'; diurnalCol = '#f97316'; }
+        else if(hour >= 10 && hour < 16){ diurnalPhase = 'AFTERNOON DEEP MIXING'; diurnalCol = '#4ade80'; }
+        else if(hour >= 16 && hour < 20){ diurnalPhase = 'EVENING COLLAPSE'; diurnalCol = '#fbbf24'; }
+        else { diurnalPhase = 'NOCTURNAL STABLE LAYER'; diurnalCol = '#8b5cf6'; }
+
+        // Wind shear assessment
+        var shearNote = '';
+        if(window._wxHourly && window._wxHourly.winddirection_700hPa && window._wxHourly.wind_direction_10m){
+          var ni = window._wxNearestIdx || 0;
+          var sfcW = window._wxHourly.wind_direction_10m[ni];
+          var uprW = window._wxHourly.winddirection_700hPa[ni];
+          if(sfcW != null && uprW != null){
+            var shearDeg = Math.abs(uprW - sfcW);
+            if(shearDeg > 180) shearDeg = 360 - shearDeg;
+            shearNote = shearDeg > 60 ? 'Strong directional shear (' + Math.round(shearDeg) + ' deg) — plumes curve between layers' :
+                        shearDeg > 20 ? 'Moderate shear (' + Math.round(shearDeg) + ' deg) — slight plume curvature' :
+                        'Weak shear (' + Math.round(shearDeg) + ' deg) — plumes travel straight';
+          }
+        }
+
+        // AQI cross-check
+        var aqiConsistency = '';
+        if(pm25Val > 0 && upF.length > 0){
+          if(pm25Val > 55) aqiConsistency = 'AQI confirms active smoke impact — PM2.5 elevated';
+          else if(pm25Val > 35) aqiConsistency = 'AQI shows moderate smoke influence — PM2.5 above normal';
+          else if(pm25Val > 20) aqiConsistency = 'AQI shows mild elevation — smoke may be present but diluted';
+          else aqiConsistency = 'AQI is good — upwind smoke not reaching surface (may be aloft)';
+        } else if(pm25Val > 0 && upF.length === 0){
+          if(pm25Val > 35) aqiConsistency = 'Elevated PM2.5 without upwind fires — likely urban/industrial source';
+          else aqiConsistency = 'AQI is clean with no upwind fire smoke';
+        }
+
+        h+='<div style="padding:5px 7px;background:rgba(251,146,60,.04);border-radius:5px;border-left:2px solid #fb923c;margin-bottom:5px;">';
+        h+='<div style="font-size:.34rem;color:#fb923c;font-weight:700;margin-bottom:3px;">SMOKE TRANSPORT VISUALIZATION</div>';
+
+        // Stats row
+        h+='<div style="display:grid;grid-template-columns:1fr 1fr 1fr 1fr;gap:3px;margin-bottom:4px;">';
+        h+='<div style="padding:2px 4px;background:rgba(0,0,0,.15);border-radius:3px;text-align:center;">';
+        h+='<div style="font-size:.20rem;color:#555;font-weight:600;">FIRES RENDERED</div>';
+        h+='<div style="font-size:.36rem;color:#fb923c;font-weight:800;">'+renderCap+'</div>';
+        h+='<div style="font-size:.18rem;color:#777;">of '+totalTracked+' tracked</div>';
+        h+='</div>';
+        h+='<div style="padding:2px 4px;background:rgba(0,0,0,.15);border-radius:3px;text-align:center;">';
+        h+='<div style="font-size:.20rem;color:#555;font-weight:600;">DUAL-LAYER</div>';
+        h+='<div style="font-size:.36rem;color:#60a5fa;font-weight:800;">'+dualLayerCount+'</div>';
+        h+='<div style="font-size:.18rem;color:#777;">sfc + elevated</div>';
+        h+='</div>';
+        h+='<div style="padding:2px 4px;background:rgba(0,0,0,.15);border-radius:3px;text-align:center;">';
+        h+='<div style="font-size:.20rem;color:#555;font-weight:600;">UPWIND</div>';
+        h+='<div style="font-size:.36rem;color:#ef4444;font-weight:800;">'+upF.length+'</div>';
+        h+='<div style="font-size:.18rem;color:#777;">toward you</div>';
+        h+='</div>';
+        h+='<div style="padding:2px 4px;background:rgba(0,0,0,.15);border-radius:3px;text-align:center;">';
+        h+='<div style="font-size:.20rem;color:#555;font-weight:600;">DIURNAL</div>';
+        h+='<div style="font-size:.28rem;color:'+diurnalCol+';font-weight:700;">'+diurnalPhase.split(' ')[0]+'</div>';
+        h+='<div style="font-size:.18rem;color:#777;">'+diurnalPhase.split(' ').slice(1).join(' ')+'</div>';
+        h+='</div>';
+        h+='</div>';
+
+        // Transport layer breakdown
+        h+='<div style="display:grid;grid-template-columns:1fr 1fr;gap:4px;margin-bottom:4px;">';
+        // Surface layer
+        h+='<div style="padding:3px 5px;background:rgba(249,115,22,.06);border-radius:3px;border:1px solid rgba(249,115,22,.15);">';
+        h+='<div style="font-size:.24rem;color:#f97316;font-weight:700;">SURFACE LAYER (0-1,000ft)</div>';
+        h+='<div style="font-size:.26rem;color:#aaa;line-height:1.3;">';
+        if(hour >= 20 || hour < 6){
+          h+='Nocturnal inversion active — smoke pools at surface. Plumes spread wide and shallow. ';
+          h+='This is when ground-level smoke exposure is worst in valleys.';
+        } else if(hour >= 10 && hour < 16){
+          h+='Daytime convective mixing — surface smoke lofts upward. Reduced surface pooling. ';
+          h+='Best air quality window of the day.';
+        } else {
+          h+='Transition period — mixing height '+(hour < 12 ? 'rising' : 'falling')+'. ';
+          h+='Surface smoke '+(hour < 12 ? 'beginning to disperse' : 'starting to trap')+'.';
+        }
+        h+='</div></div>';
+        // Elevated layer
+        h+='<div style="padding:3px 5px;background:rgba(59,130,246,.06);border-radius:3px;border:1px solid rgba(59,130,246,.15);">';
+        h+='<div style="font-size:.24rem;color:#3b82f6;font-weight:700;">ELEVATED LAYER (5,000-15,000ft)</div>';
+        h+='<div style="font-size:.26rem;color:#aaa;line-height:1.3;">';
+        h+= dualLayerCount > 0 ? dualLayerCount+' fire(s) lofting to transport altitude. ' : 'No fires large enough for significant elevated transport. ';
+        if(shearNote) h+= shearNote + '. ';
+        h+='Upper-level smoke can travel 500-1500mi before subsiding.';
+        h+='</div></div>';
+        h+='</div>';
+
+        // AQI cross-check
+        if(aqiConsistency){
+          var aqiCol = pm25Val > 55 ? '#ef4444' : pm25Val > 35 ? '#f97316' : pm25Val > 20 ? '#fbbf24' : '#4ade80';
+          h+='<div style="display:flex;gap:6px;align-items:center;padding:2px 5px;background:rgba(0,0,0,.1);border-radius:3px;margin-bottom:3px;">';
+          h+='<div style="font-size:.24rem;color:'+aqiCol+';font-weight:700;">AQI CROSS-CHECK</div>';
+          h+='<div style="font-size:.24rem;color:#888;">'+aqiConsistency+'</div>';
+          h+='</div>';
+        }
+
+        // Largest fire note
+        if(largestFire && (largestFire.acres || 0) > 500){
+          var lfAcres = largestFire.acres >= 1000 ? (largestFire.acres/1000).toFixed(1)+'K' : largestFire.acres;
+          var hasPyrocu = (largestFire.acres || 0) > 5000;
+          h+='<div style="font-size:.24rem;color:#777;line-height:1.3;">';
+          h+='Largest source: <b style="color:#ddd;">'+largestFire.name+'</b> ('+lfAcres+' acres, '+largestFire.dist+'mi '+largestFire.bearingDir+')';
+          if(hasPyrocu) h+=' — generating pyrocumulus convective column';
+          if(largestFire.contained > 0) h+=' · '+largestFire.contained+'% contained';
+          h+='</div>';
+        }
+
+        h+='<div style="font-size:.20rem;color:#444;margin-top:2px;">Smoke rendering: Bezier-curved dual-layer Gaussian dispersion with mesoscale spread, simplex noise turbulence, and smoke age coloring.</div>';
+        h+='</div>';
+      }
+
       // ── HMS satellite smoke detection status ──
       if (hmsStatus) {
         var hmsCol = hmsStatus === 'active' ? '#f44' : hmsStatus === 'detected' ? '#f90' : '#4f8';
